Fix issue #61: Tab Titles - Shift Down

--- a/src/sass/widgets/_user-page-header-widget.scss
+++ b/src/sass/widgets/_user-page-header-widget.scss
@@ -83,7 +83,7 @@
     line-height: 25px;
     margin: 5px 2px 0 0;
     min-width: 103px;
-    padding: 0 10px 0 10px;
+    padding: 1px 10px 0 10px;  // padding-top of 1px makes the text vertically centered on some browsers
     text-align: center;
 }
 
